third_party/move/move-compiler-v2/tests/checking/typing/unary_not_invalid.exp

Diagnostics:
error: invalid call of `!`: expected `bool` but found `&bool` for argument 1
  ┌─ tests/checking/typing/unary_not_invalid.move:7:9
  │
7 │         !&true;
  │         ^^^^^^

error: invalid call of `!`: expected `bool` but found `&bool` for argument 1
  ┌─ tests/checking/typing/unary_not_invalid.move:8:9
  │
8 │         !&false;
  │         ^^^^^^^

error: invalid call of `!`: `integer` not compatible with `bool` for argument 1
  ┌─ tests/checking/typing/unary_not_invalid.move:9:9
  │
9 │         !0;
  │         ^^

error: invalid call of `!`: `integer` not compatible with `bool` for argument 1
   ┌─ tests/checking/typing/unary_not_invalid.move:10:9
   │
10 │         !1;
   │         ^^

error: invalid call of `!`: expected `bool` but found `M::R` for argument 1
   ┌─ tests/checking/typing/unary_not_invalid.move:11:9
   │
11 │         !r;
   │         ^^

error: invalid call of `!`: expected `bool` but found `M::R` for argument 1
   ┌─ tests/checking/typing/unary_not_invalid.move:12:9
   │
12 │         !r;
   │         ^^

error: invalid call of `!`: expected `bool` but found `(integer, bool)` for argument 1
   ┌─ tests/checking/typing/unary_not_invalid.move:13:9
   │
13 │         !(0, false);
   │         ^^^^^^^^^^^

error: invalid call of `!`: expected `bool` but found `()` for argument 1
   ┌─ tests/checking/typing/unary_not_invalid.move:14:9
   │
14 │         !();
   │         ^^^
